--- a/Part 3/package.json
+++ b/Part 3/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.4.1",
+    "mongoos": "^0.0.1-security",
+    "mongoose": "^7.8.9",
     "morgan": "^1.10.0"
   }
 }
